# toy-lang

./: Cargo.toml  a.out  a.txt  b.txt  class_lib.txt  classes.txt  fib.py  module.json  spread.txt  test.rsc  test.txt  todo.md
src/: lib.rs  main.rs  util.rs
src/common/: mod.rs
src/module/: file.rs  mod.rs  module.rs  res.rs  resolve.rs
src/parser/: desugar.rs  grammar.rs  identifier.rs  mod.rs
src/runtime/: builtins.rs  engine.rs  env.rs  ignore.rs  mod.rs  obj.rs
src/runtime/core/: class.rsc  io.rsc  iter.rsc  protos.rsc
std/: class.tl  func.rsc  iter.rsc  iter.tl  mod.rsc  rand.rsc  string.rsc  test.tl  util.rsc  util.tl
test/: a.tl  b.tl  fizzbuzz.rsc  life.rsc  main.rsc  main.tl  option.rsc
test/foo/: index.tl
test/src/: fizzbuzz.rsc  life.rsc  main.rsc  option.rsc  vec.rsc
test/util/: index.tl
